...
        
        // Configure the cell
        let stats = statisticData[indexPath.row]
        
        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: reuseIdentifier, for: indexPath) as! GraphsCollectionCell
        cell.versusLabel.text = "vs. \(stats.opponentClass?.rawValue ?? "All")"
        cell.opponentClassImage.image = stats.opponentClass?.smallIcon() ?? UIImage(named: "GenericSmall")
        
        if stats.totalGames == 0 {
            cell.winInfoLabel.text = "No Data"
        } else {
            cell.winInfoLabel.text = "\(String(Int(stats.winRate)))% : (\(String(stats.wins))-\(String(stats.losses)))"
        }
        
        cell.per = CGFloat(stats.winRate)
        
...
